src/objects/BGBK__Refund__c.object
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <fields>
        <fullName>BGBK__Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refundee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>BGBK__Payment__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BGBK__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	    
    <fields>
        <fullName>BGBK__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <referenceTo>MUSW__Receipt__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Refund</label>
    <nameField>
        <displayFormat>RFD-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BGBK__Refund_Amount_must_be_positive</fullName>
        <active>true</active>
        <errorConditionFormula>BGBK__Amount__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>BGBK__Amount__c</errorDisplayField>
        <errorMessage>Refund Amount must be a valid positive amount.</errorMessage>
    </validationRules>
</CustomObject>